# nations-matches-prediction

./: README.md  main.py  pyproject.toml
data/raw/: fifa_ranking.csv  unique.txt
data/test/: test.csv
data/train/: train.csv
notebooks/: coords_cache.json  data-loading.ipynb  feature-engineering.ipynb  team_ids.json  weather_cache.json
