[project]
name = "nations-matches-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "countryinfo>=1.0.1",
    "geopy>=2.5.0",
    "matplotlib>=3.11.0",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "requests>=2.34.2",
    "seaborn>=0.13.2",
]
